Fix property editing of sequential and associative views

--- a/HaketonEditor/imgui.ini
+++ b/HaketonEditor/imgui.ini
@@ -67,6 +67,16 @@ Size=1593,389
 Collapsed=0
 DockId=0x0000000A,0
 
+[Window][Add Map Element]
+Pos=948,633
+Size=664,102
+Collapsed=0
+
+[Window][Add Map Element##TestMap]
+Pos=948,633
+Size=664,102
+Collapsed=0
+
 [Table][0xC9935533,3]
 Column 0  Weight=0.8471
 Column 1  Weight=1.1529
